Fix show/hide button overlap in safari
#10

--- a/components/Input/Input.module.css
+++ b/components/Input/Input.module.css
@@ -28,13 +28,12 @@
 }
 
 .showPasswordButton {
-  position: absolute;
   border: none;
   background-color: transparent;
   cursor: pointer;
-  width: 40px;
-  height: 30px;
-  top: calc(100% - 33px);
   right: 0;
-  font-size: 1.4em;
+  font-size: 0.7em;
+  padding: 0;
+  float: right;
+  margin: 4px 0 0 0;
 }
